add fonts, header + first section ready

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -14,7 +14,7 @@ html(lang="ru")
     body
     
         include modules/header/header
-
+        include modules/section1/sec1
         include modules/footer/footer 
         
         script(src='js/main.min.js')
