--- a/src/pages/modules/header/header.pug
+++ b/src/pages/modules/header/header.pug
@@ -1,1 +1,9 @@
-header header
+header.header
+    .container 
+        .logo
+            img(src="img/logo.svg", alt="")
+        include ../nav/nav 
+        .header__title For All Your Landscaping&nbsp;Needs...
+        .header__content 
+             h2.header__content-title Welcome to Nursery Supply Co.
+             p.header__content-text &nbsp;Nursery Supply Co. LLC, the manufacturer of Black Platinum and Gold Diamond hardwood mulch was founded in 1974. In March 2004 the company was purchased by its current ownership based in Louisville, KY. Our mulch manufacturing plants in Clay City, KY and Greenville, IN provide numerous mulch products to customers throughout Ohio, Indiana and Kentucky. We service a customer base which includes;...,
