--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -4,3 +4,13 @@ $mediaWidthTablet: 768px;
 $mediaWidthTabletHorizontal: 1024px;
 $mediaWidthLaptop: 1366px;
 //Colors
+$white: #ffffff;
+$rusty-orange: #e46107;
+$pale-grey: #f1f2f5;
+$pine: #26311c;
+$slime-green: #8dc705;
+$black: #000000;
+$grass-green: #48890a;
+$warm-grey: #7b7b7b;
+$warm-grey-two: #919191;
+$white-two: #e4e4e4;
