--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -20,6 +20,10 @@ ul{
     list-style: none;
     padding-left: 0;
 }
+h1,h2,h3,h4,h5,h6,p{
+    padding: 0;
+    margin: 0;
+}
 a{
     text-decoration: none;
     color: inherit;
