--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,4 +10,6 @@
 
 @import "../pages/modules/header/header";
 
+@import "../pages/modules/section1/sec1";
+
 @import "../pages/modules/footer/footer";
