--- a/src/styles/utils/fonts.scss
+++ b/src/styles/utils/fonts.scss
@@ -2,9 +2,136 @@
 @font-face {
     font-family: 'Blogger Sans';
     src: local('Blogger Sans Italic'), local('BloggerSans-Italic'),
-        url('../fonts/BloggerSans-Italic.woff2') format('woff2'),
+        url('../fonts/BloggerSans-Italic.otf') format('otf'),
         url('../fonts/BloggerSans-Italic.woff') format('woff');
     font-weight: normal;
     font-style: italic;
     font-display: swap;
 }
+@font-face {
+    font-family: Arial;
+    src: local(ArialMT),
+      url(../fonts/ArialMT.otf) format("otf"),
+      url(../fonts/ArialMT.woff) format("woff"),
+      url(../fonts/ArialMT.ttf) format("truetype");
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    font-display: swap;
+  }
+  @font-face {
+    font-family: HelveticaNeueCyr;
+    src: local(HelveticaNeueCyr-Light),
+      url(../fonts/HelveticaNeueCyr-Light.otf) format("otf"),
+      url(../fonts/HelveticaNeueCyr-Light.woff) format("woff"),
+      url(../fonts/HelveticaNeueCyr-Light.ttf) format("truetype");
+    font-weight: 300;
+    font-style: normal;
+    font-stretch: normal;
+    font-display: swap;
+  }
+  @font-face {
+    font-family: HelveticaNeueCyr;
+    src: local(HelveticaNeueCyr-Bold),
+      url(../fonts/HelveticaNeueCyr-Bold.otf) format("otf"),
+      url(../fonts/HelveticaNeueCyr-Bold.woff) format("woff"),
+      url(../fonts/HelveticaNeueCyr-Bold.ttf) format("truetype");
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    font-display: swap;
+  }
+  @font-face {
+    font-family: HelveticaNeueCyr;
+    src: local(HelveticaNeueCyr-Black),
+      url(../fonts/HelveticaNeueCyr-Black.otf) format("otf"),
+      url(../fonts/HelveticaNeueCyr-Black.woff) format("woff"),
+      url(../fonts/HelveticaNeueCyr-Black.ttf) format("truetype");
+    font-weight: 900;
+    font-style: normal;
+    font-stretch: normal;
+    font-display: swap;
+  }
+  @font-face {
+    font-family: NimbusSanTCon;
+    src: local(NimbusSanTConBold),
+      url(../fonts/NimbusSanTConBold.otf) format("otf"),
+      url(../fonts/NimbusSanTConBold.woff) format("woff"),
+      url(../fonts/NimbusSanTConBold.ttf) format("truetype");
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    font-display: swap;
+  }
+  @mixin title {
+    font-family: HelveticaNeueCyr;
+    font-size: 68px;
+    font-weight: 900;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 0.88;
+    letter-spacing: normal;
+    text-align: center;
+    color: $pale-grey;
+  }
+  @mixin title-2-bold {
+    font-family: HelveticaNeueCyr;
+    font-size: 54px;
+    font-weight: bold;
+    line-height: 0.98;
+    text-align: left;
+    color: $grass-green;
+  }
+  @mixin title-2-light {
+    font-family: HelveticaNeueCyr;
+    font-size: 34px;
+    font-weight: 300;
+    line-height: 1.56;
+    text-align: left;
+    color: $black;
+  }
+  @mixin sub-title {
+    font-family: HelveticaNeueCyr;
+    font-size: 34px;
+    font-weight: 300;
+    line-height: 1.18;
+    text-align: center;
+    color: $pale-grey;
+  }
+  @mixin cards-description {
+    font-family: HelveticaNeueCyr;
+    font-size: 34px;
+    font-weight: 300;
+    line-height: 1.18;
+    text-align: left;
+    color: $pale-grey;
+  }
+  @mixin menu-buttons {
+    font-family: NimbusSanTCon;
+    font-size: 19px;
+    font-weight: bold;
+    line-height: 2.11;
+    text-align: center;
+    color: $white;
+  }
+  @mixin text-sec1 {
+    font-family: Arial;
+    font-size: 14px;
+    line-height: 1.79;
+    text-align: center;
+    color: $white;
+  }
+  @mixin text-2 {
+    font-family: Arial;
+    font-size: 14px;
+    line-height: 1.79;
+    text-align: left;
+    color: $black;
+  }
+  @mixin footer-text {
+    font-family: Arial;
+    font-size: 12px;
+    line-height: 1.67;
+    text-align: left;
+    color: $warm-grey-two;
+  }
