add fonts, images, styles

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -15,6 +15,7 @@ html(lang="ru")
     
         include modules/header/header
         include modules/section1/sec1
+        include modules/section2/sec2
         include modules/footer/footer 
         
         script(src='js/main.min.js')
