--- a/src/pages/modules/footer/footer.pug
+++ b/src/pages/modules/footer/footer.pug
@@ -1,3 +1,6 @@
-footer   footer
-  
-   
+footer.footer 
+    .container 
+        include ../nav/nav 
+    .footer__description
+        .footer__copyright  © Nursery Supply Co. All rights reserved.
+        .footer__development Development by Nursery Supply Co. 2016
