--- a/src/pages/modules/header/header.pug
+++ b/src/pages/modules/header/header.pug
@@ -1,7 +1,8 @@
 header.header
     .container 
         .logo
-            img(src="img/logo.svg", alt="")
+            img(src="img/logo.svg", alt="logo")
+            img.elipse(src="img/Ellipse.svg", alt="logo shape")
         include ../nav/nav 
         .header__title For All Your Landscaping&nbsp;Needs...
         .header__content 
