--- a/src/pages/pug-mixins/mixins.pug
+++ b/src/pages/pug-mixins/mixins.pug
@@ -10,4 +10,4 @@ mixin card(title,src)
         .card__image 
             img(src=`img/${src}`, alt=title)
         .card__title=title 
-        a.card__button(href="#", target="_blank", rel="noopener noreferrer") Learn more
+        a.button(href="#", target="_blank", rel="noopener noreferrer") Learn more
