--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,4 +12,6 @@
 
 @import "../pages/modules/section1/sec1";
 
+@import "../pages/modules/section2/sec2";
+
 @import "../pages/modules/footer/footer";
