add media, except nav

--- a/src/pages/modules/header/header.pug
+++ b/src/pages/modules/header/header.pug
@@ -1,8 +1,7 @@
 header.header
     .container 
         .logo
-            img(src="img/logo.svg", alt="logo")
-            img.elipse(src="img/Ellipse.svg", alt="logo shape")
+           img(src="./img/logo@1x.png", alt="logo")
         include ../nav/nav 
         .header__title For All Your Landscaping&nbsp;Needs...
         .header__content 
