--- a/src/pages/modules/nav/nav.pug
+++ b/src/pages/modules/nav/nav.pug
@@ -1,7 +1,12 @@
 nav 
     ul.nav
-        li Home                                    
-        li Mulch Supplier
-        li Soils 
-        li Mulch Fundraisers 
-        li Contact Us
+        li 
+            a(href="#") Home                                    
+        li 
+            a(href="#") Mulch Supplier
+        li 
+            a(href="#") Soils 
+        li 
+            a(href="#") Mulch Fundraisers 
+        li 
+            a(href="#") Contact Us
