--- a/src/pages/modules/footer/footer.scss
+++ b/src/pages/modules/footer/footer.scss
@@ -3,6 +3,20 @@
         .nav{
             margin: 0;
             color: $warm-grey;
+            @include media-custom(650px){
+                padding: 15px 0;
+            }
+            li{
+                padding: 22px;
+                line-height: 1;
+                transition: all 0.4s ease-in;
+                @include media-custom(650px){
+                    padding: 10px 22px;
+                }
+                @include media-custom(400px){
+                    padding: 10px;
+                }
+            }
             li:hover{
                 color: $slime-green;
             }
@@ -10,10 +24,23 @@
     }
     .footer__description{
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
         padding: 2% 13.2% 2% 11.2%;
         background-color: $white-two;
         @include footer-text;
+        .footer__copyright,.footer__development{
+            margin-right: 20px;
+            margin-top: 10px;
+            @include media-custom(400px){
+                margin-right: 0px;
+            }
+        }
+    }
+    @include media-custom(650px){
+        .footer__description{
+            justify-content: center;
+        }
     }
 }
