--- a/src/pages/modules/section1/sec1.scss
+++ b/src/pages/modules/section1/sec1.scss
@@ -1,29 +1,38 @@
 .about{
+    padding-bottom: 1.5%;
     background-color: $pine;
     border-top:4px solid $rusty-orange;
     position: relative;
     .container{
         .cards{
-            margin-top: -11.5%;
+            margin-top: -13.5%;
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             align-items: center;
             .card{
                 max-width: 220px;
-                margin-right: 11%;
+                margin-right: 12%;
                 margin-bottom: 3%;
+                @include media-custom(975px){
+                    margin-right: 5%;
+                }
+                @include media-custom(820px){
+                    max-width: 200px;
+                    margin-bottom: 6%;
+                }
                 .card__image{
                     border:7px solid $white;
                     border-radius: 50%;
                     img{
+                        width: 100%;
                         border-radius: 50%;
                         object-fit: cover;
                         object-position: center;
                     }
                 }
                 .card__title{
-                    margin-top: 15%;
+                    margin-top: 12%;
                     margin-bottom: 8%;
                     @include cards-description;
                     text-align: center;
@@ -34,6 +43,9 @@
             }
             .card:nth-of-type(3n),.card:last-of-type{
                 margin-right: 0;
+                @include media-custom(750px){
+                    margin-right: 5%;
+                }
             }
         }
     }
