--- a/src/pages/modules/section2/sec2.scss
+++ b/src/pages/modules/section2/sec2.scss
@@ -2,10 +2,11 @@
     background-image: url(../img/bg_bottom.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: bottom center;
+    background-position: bottom right;
     .container{
-        padding: 7.5% 0;
+        padding: 6% 0 8%;
         .community__title{
+            margin-bottom: 19px;
             @include title-2-light;
             line-height: 1;
             span{
@@ -15,15 +16,55 @@
                 letter-spacing: normal;
                 color: $grass-green;
             }
+            @include media-custom(650px){
+                text-align: center;
+                color:$white;
+                span{
+                    color:$white;
+                    font-size: 45px;
+                }
+            }
         }
         .community__text{
-            width: 45%;
+            width: 46%;
             @include text-2;
-            margin-bottom: 2.6%;
+            margin-bottom: 2.2%;
+            @include media-custom(750px){
+                width: 60%;
+                padding: 3% 4.8% 3.6% 4.6%;
+                border-radius: 5px;
+                background-color: rgba(38, 49, 28, 0.7);
+                color:$white;
+            }
+            @include media-custom(650px){
+                width: 80%;
+                margin:  2.2% auto;
+            }
+            @include media-custom(550px){
+                width: 100%;
+            }
         }
         .button{
             margin: 0;
             width: 164px;
+            transition: all 0.4s ease-in;
+            border-color: $white;
+            @include media-custom(650px){
+                margin: 0 auto;
+            }
+            @include media-custom(550px){
+                color: $grass-green;
+            border-color: $grass-green;
+            }
+        }
+        .button:hover{
+            color: $grass-green;
+            border-color: $grass-green;
+            @include media-custom(550px){
+                color: $warm-grey;
+                border-color: $warm-grey;
+
+            }
         }
     }
 }
