--- a/src/pages/modules/header/header.scss
+++ b/src/pages/modules/header/header.scss
@@ -1,53 +1,83 @@
 .header{
-   // padding-bottom: 235px;
     background-image: url(../img/bg_top.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom center;
     position: relative;
     .container{
-        padding-top: 15%;
         padding-bottom: 18.3%;
-        .logo{
+        .header_burger-menu{
+            display: none;
             position: absolute;
-            top:18px;
-            left: 0;
-            z-index: 4;
+            z-index: 8;
+            top:25px;
+            right: 25px;
+            svg{
+                fill: $white;
+                cursor: pointer;
+            }
+            @include media-custom(700px){
+                display: block;
+            }
+            @include media-custom(450px){
+                svg{
+                    width: 35px;
+                    height: 35px;
+                }
+            }
+        }
+        .logo{
+            position: relative;
+            top:20px;
             img{
                 width: 100%;
             }
         }
-        /*.logo{
-            width: 315px;
-            height: 181px;
-            margin: 0 auto;
-            padding: 34px 43px 25px 46px;
-           border-radius: 150px 150px 0 0;
-            text-align: center;
-            background-color: $white;
-            .elipse{
-               position: absolute;
-               display: block;
-               width: 100%;
-               top: 20.2%;
-               left: 0;
-               z-index: 5;
-            }
-        }*/
-
         .nav{
+            margin-top: -10px;
             border-top-left-radius:100%;
             border-top-right-radius:100%;
             overflow: hidden;
-            margin-top: 8px;
+            @include media-custom(900px){
+                margin-top: -4px;
+            } @include media-custom(750px){
+                margin-top: 0px;
+            }
+            @include media-custom(700px){
+               display: none;
+            }
             li{ 
-                position: relative;
-                z-index: 5;
                 transition: all 0.4s ease-in;
+                @include media-custom(900px){
+                    padding:18px;
+                }
             }
             li:hover{
                 background-color: $rusty-orange;
             }
+        }
+        nav:before{
+            content:'';
+            display: block;
+            width: 20%;
+            margin: 0 auto;
+            box-shadow: 0px 70px 188px 140px rgb(19, 71, 8);
+        }
+        .nav.active{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            position: fixed;
+            z-index: 6;
+            top: -100vh;
+            right: 0;
+            left: 0;
+            min-height: 100vh;
+            transition:all 1.2s ease-in;
+            font-size: 30px;
+            border-radius:0 0 0 0;
+            background-color: rgba(38, 49, 28, 0.9);
         }
         .header__title{
             position: relative;
@@ -57,8 +87,13 @@
             margin-bottom: 2%;
             text-shadow: 0 0 6px rgba(31, 88, 0, 0.75);
             @include  title;
-            @include media-custom(650px){
+            @include media-custom(700px){
+                margin-top: 6%;
                 margin-bottom: 6%;
+            }
+            @include media-custom(500px){
+                margin-top: 40px;
+                margin-bottom: 30px;
             }
         }
         .header__content{
