--- a/src/pages/modules/section1/sec1.scss
+++ b/src/pages/modules/section1/sec1.scss
@@ -11,24 +11,32 @@
             justify-content: center;
             align-items: center;
             .card{
-                max-width: 220px;
                 margin-right: 12%;
                 margin-bottom: 3%;
                 @include media-custom(975px){
                     margin-right: 5%;
                 }
                 @include media-custom(820px){
-                    max-width: 200px;
+                    width: 200px;
                     margin-bottom: 6%;
                 }
                 .card__image{
+                    width: 220px;
+                    height: 220px;
                     border:7px solid $white;
                     border-radius: 50%;
+                    overflow: hidden;
+                    @include media-custom(820px){
+                        width: 200px;
+                        height: 200px;
+                    }
                     img{
-                        width: 100%;
-                        border-radius: 50%;
+                        width: 220px;
                         object-fit: cover;
-                        object-position: center;
+                        object-position: center center;
+                        @include media-custom(820px){
+                            width: 200px;
+                        }
                     }
                 }
                 .card__title{
