fix img height in sec1

--- a/src/pages/modules/section1/sec1.scss
+++ b/src/pages/modules/section1/sec1.scss
@@ -32,10 +32,12 @@
                     }
                     img{
                         width: 220px;
+                        height: 220px;
                         object-fit: cover;
                         object-position: center center;
                         @include media-custom(820px){
                             width: 200px;
+                            height: 200px;
                         }
                     }
                 }
