--- a/src/pages/modules/header/header.scss
+++ b/src/pages/modules/header/header.scss
@@ -9,7 +9,7 @@
         .header_burger-menu{
             display: none;
             position: absolute;
-            z-index: 8;
+            z-index: 10;
             top:25px;
             right: 25px;
             svg{
@@ -28,12 +28,15 @@
         }
         .logo{
             position: relative;
+            /**/
+            z-index: 8;
             top:20px;
             img{
                 width: 100%;
             }
         }
         .nav{
+            /**/
             margin-top: -10px;
             border-top-left-radius:100%;
             border-top-right-radius:100%;
@@ -47,6 +50,7 @@
                display: none;
             }
             li{ 
+                z-index: 7;
                 transition: all 0.4s ease-in;
                 @include media-custom(900px){
                     padding:18px;
@@ -56,20 +60,35 @@
                 background-color: $rusty-orange;
             }
         }
-        nav:before{
-            content:'';
-            display: block;
-            width: 20%;
-            margin: 0 auto;
-            box-shadow: 0px 70px 188px 140px rgb(19, 71, 8);
-        }
+/**/ 
+nav{
+    position: relative;
+}
+.nav::before{
+    content:'';
+    background-image: url(../img/ellipse.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:top center;
+    position: absolute;
+    width: 100%;
+    height: 250px;
+    z-index: 1;
+    top:-5px;
+    @include media-custom(1000px){
+        top:0px;
+    }
+    @include media-custom(700px){
+        height: 0;
+    }
+}
         .nav.active{
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             position: fixed;
-            z-index: 6;
+            z-index: 9;
             top: -100vh;
             right: 0;
             left: 0;
