fix logo, cards, sec2

--- a/src/pages/modules/footer/footer.scss
+++ b/src/pages/modules/footer/footer.scss
@@ -27,7 +27,7 @@
         flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
-        padding: 2% 13.2% 2% 11.2%;
+        padding: 10px 13.2% 20px 11.2%;
         background-color: $white-two;
         @include footer-text;
         .footer__copyright,.footer__development{
