--- a/src/pages/modules/header/header.pug
+++ b/src/pages/modules/header/header.pug
@@ -2,11 +2,13 @@ header.header
     .container
         .header_burger-menu 
             svg(viewbox='0 0 100 80' width='40' height='40')
-                rect(width='100' height='20' rx='8')
-                rect(y='30' width='100' height='20' rx='8')
-                rect(y='60' width='100' height='20' rx='8')
+                rect(width='100' height='10' rx='8')
+                rect(y='30' width='100' height='10' rx='8')
+                rect(y='60' width='100' height='10' rx='8')
         .logo
-           img(src="./img/Logo.png", alt="logo")
+            picture 
+                source(media="(max-width:700px)", srcset="./img/LogoMob.png")
+                img(src="./img/Logo.png", alt="logo")
         include ../nav/nav 
         .header__title For All Your Landscaping&nbsp;Needs...
         .header__content 
