--- a/src/pages/modules/section1/sec1.scss
+++ b/src/pages/modules/section1/sec1.scss
@@ -5,7 +5,8 @@
     position: relative;
     .container{
         .cards{
-            margin-top: -13.5%;
+            //margin-top: -13.5%;
+            margin-top: -110px;
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
@@ -17,8 +18,14 @@
                     margin-right: 5%;
                 }
                 @include media-custom(820px){
-                    width: 200px;
                     margin-bottom: 6%;
+                }
+                @include media-custom(750px){
+                    margin-right: 12%;
+                }
+                @include media-custom(560px){
+                    margin-right:50px;
+                    margin-left: 50px;
                 }
                 .card__image{
                     width: 220px;
@@ -26,19 +33,10 @@
                     border:7px solid $white;
                     border-radius: 50%;
                     overflow: hidden;
-                    @include media-custom(820px){
-                        width: 200px;
-                        height: 200px;
-                    }
                     img{
-                        width: 220px;
-                        height: 220px;
+                        width: 100%;
                         object-fit: cover;
                         object-position: center center;
-                        @include media-custom(820px){
-                            width: 200px;
-                            height: 200px;
-                        }
                     }
                 }
                 .card__title{
@@ -54,7 +52,20 @@
             .card:nth-of-type(3n),.card:last-of-type{
                 margin-right: 0;
                 @include media-custom(750px){
-                    margin-right: 5%;
+                    margin-right: 12%;
+                }
+                @include media-custom(560px){
+                    margin-right:50px;
+                    margin-left: 50px;
+                }
+            }
+            .card:nth-of-type(2n),.card:last-of-type{
+                @include media-custom(750px){
+                    margin-right: 0;
+                }
+                @include media-custom(560px){
+                    margin-right:50px;
+                    margin-left: 50px;
                 }
             }
         }
